--- a/Exercícios/ex022.b/index.html
+++ b/Exercícios/ex022.b/index.html
@@ -6,12 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fundos</title>
     <style>
+        body{
+            background-image: url(Imagens/pattern004.png);
+        }
+        .quadrado{
+            display: inline-block;
+            border: 1px solid black;
+            width: 300px;
+            height: 300px;
+            border-radius: 10px;
 
+        }
+
+        #q1{
+            background-color: lightgreen;
+        }
+
+        #q2{
+            background-image: linear-gradient(to top, red, blue );
+        }
+
+        #q3{
+            background-image: url(Imagens/pattern003.png);
+        }
     </style>
 </head>
 <body>
     <div class="quadrado" id="q1">
-        bor
+        
     </div>
     <div class="quadrado" id="q2">
 
