--- a/Exercícios/ex022.b/fundo06.html
+++ b/Exercícios/ex022.b/fundo06.html
@@ -11,23 +11,26 @@
             padding: 0px;
         }
         body{
-            height: 98vh;
+            height: 100vh;
             background-color: rgb(5, 54, 0);
             background-image: url(Imagens/176236.jpg);
             background-size: cover;
             background-repeat: no-repeat;
-            
+            background-attachment: fixed;
+
+            /* Uma boa combinação!!*/
         }
 
         main{
-            min-width: 300px;
-            max-width: 700px;
+            min-width: 150px;
+            max-width: 400px;
             background-color: white;
             margin: auto;
             margin-top: 80px;
             padding: 10px;
             border: 1px solid black;
             border-radius: 5px;
+            
         }
     </style>
 </head>
