--- a/Desafios/desafio11/index.html
+++ b/Desafios/desafio11/index.html
@@ -25,18 +25,72 @@
         </section>
         <section class="container" id="c1">
             <p><em>
-                Não é mais como era antes
-                    É tudo abreviado
-                    "Você" só tem duas letras
-                    O "O" e o "E" foi riscado
-                    Para declarar o amor
-                    Basta botar uma flor
-                    E um coração desenhado.
+                Não é mais como era antes <br>
+                É tudo abreviado <br>
+                "Você" só tem duas letras <br>
+                O "O" e o "E" foi riscado <br>
+                Para declarar o amor <br>
+                Basta botar uma flor <br>
+                E um coração desenhado.
             </em></p>
+        </section>
+        <section id="e2">
+            <p id="p1">
+                Arroba agora não pesa <br>
+                É parte de um endereço <br>
+                Ponto final nem se usa <br>
+                Ou vai até no começo <br>
+                Agora é .com <br>
+                Se o saite é muito bom <br>
+                Ele vale um alto preço.
+            </p>
+        </section>
+        <section id="e3">
+            <p id="p2">
+                Pra piorar a liguagem <br>
+                O emoticom é um risco <br>
+                Tem símbolo para tudo <br>
+                Ponto e vírgula e um asterisco <br>
+                Um beijo significa <br>
+                Pra entender como fica <br>
+                Decifre esse rabisco.
+            </p>
+        </section>
+        <section class="container" id="c2">
+            <p><em>
+                Tenho saudade das cartas <br>
+                Escritas com a própria mão <br>
+                Mandava no mês de Junho <br>
+                Só chegava no Verão <br>
+                Mas matava a saudade <br>
+                Era texto de verdade <br>
+                Nas linhas do coração.
+            </em></p>
+        </section>
+        <section id="e4">
+            <p id="p3">
+                Agora, escrevo e envio <br>
+                Chegando na mesma hora <br>
+                Mas quando vou prosear <br>
+                A pessoa foi embora <br>
+                Abriu outro aplicativo <br>
+                O mundo ficou cativo <br>
+                Da tecnologia do agora. <br>
+            </p>
+            <p id="p4">
+                Felizmente, pra orar <br>
+                Não precisa de internet <br>
+                Deus escuta todo mundo <br>
+                Se quiser, faça esse teste <br>
+                Dois pontos são dois joelhos <br>
+                Seus lábios são aparelhos <br>
+                Deixe que Deus interprete.
+            </p>
         </section>
     </main>
     <footer>
-        <p>Desenvolvido por Gleidson Lucas para o curso de HTML e CSS</p>
+        <p>Desenvolvido por <a href="https://github.com/gleidsonlucas" target="_blank">Gleidson Lucas</a> <br>
+            para o curso de HTML e CSS</p>
     </footer>
 </body>
 </html>
